--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "axios": "^0.18.0",
     "sails": "^1.1.0",
     "sails-hook-orm": "^2.1.1",
-    "sails-hook-sockets": "^1.5.5"
+    "sails-hook-sockets": "^1.5.5",
+    "telegram-bot-api": "^1.3.3"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
