--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "axios": "^0.18.1",
-    "sails": "^1.2.3",
+    "sails": "^1.2.5",
     "sails-hook-orm": "^2.1.1",
-    "sails-hook-sockets": "^1.5.5",
-    "telegram-bot-api": "^1.3.3"
+    "sails-hook-sockets": "^2.0.0"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
